# ftsearch

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pixi.toml  pyproject.toml  setup.py
cmake/: FindOpenBLAS.cmake
ftsearch/: __init__.py
ftsearch/include/: ftsearch.h  utils.h
ftsearch/src/: bindings.cpp  ftsearch.cpp  utils.cpp
misc/: blas_benchmark.cpp  blas_mm.cpp  faiss_bench.py  libtorch_test.cpp  test.cpp  test.ipynb
src/: CMakeLists.txt  FlatSearch.cpp  FlatSearch.h  FlatSearch_new.h  RaggedArray.h  SearchResult.cpp  SearchResult.h  utils.cpp  utils.h
src/old/: FlatIndex.cpp  FlatIndex.h  FlatIndexM.h  RaggedArray_old.cpp  RaggedArray_old.h  ScoreQueue.cpp  ScoreQueue.h  SequenceIndexer.h  flatip_test.cpp  types.cpp  types.h  utils.cpp  utils.h
tests/: CMakeLists.txt  loop_bench.cpp  raggedtest.cpp  search_test.cpp
